@@ -3,7 +3,7 @@
 
    This file is part of LibTMCG.
 
- Copyright (C) 2017, 2018  Heiko Stamer <HeikoStamer@gmx.net>
+ Copyright (C) 2017, 2018, 2019  Heiko Stamer <HeikoStamer@gmx.net>
 
    LibTMCG is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -43,9 +43,10 @@ aiounicast_nonblock::aiounicast_nonblock
 	 const size_t aio_default_scheduler_in,
 	 const time_t aio_default_timeout_in,
 	 const bool aio_is_authenticated_in,
-	 const bool aio_is_encrypted_in):
+	 const bool aio_is_encrypted_in,
+	 const bool aio_is_chunked_in):
 		aiounicast(n_in, j_in, aio_default_scheduler_in, aio_default_timeout_in,
-			aio_is_authenticated_in, aio_is_encrypted_in)
+			aio_is_authenticated_in, aio_is_encrypted_in, aio_is_chunked_in)
 {
 	if (j_in >= n_in)
 		throw std::invalid_argument("aiounicast_nonblock: j >= n");
